{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 2059,
  "lineage": "73503fc5-a427-b53e-02ca-7f98d7e4cfa6",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0638ea9fa9a6ceac1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0638ea9fa9a6ceac1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20211031183207780400000009",
            "name_prefix": "all_worker_management",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0cb58d415f30e5ea8",
            "description": "Allow NFS traffic.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0401200e649dc646d",
                  "sg-0638ea9fa9a6ceac1",
                  "sg-0b83424a08bd7862d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb58d415f30e5ea8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0401200e649dc646d",
                  "sg-0638ea9fa9a6ceac1",
                  "sg-0b83424a08bd7862d"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ingress-terraform-20211031183152959300000003-sg",
            "name_prefix": "",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_efs_file_system.efs_provisioner",
            "module.eks.aws_security_group.all_worker_mgmt",
            "module.eks.aws_security_group.worker_group_mgmt_one",
            "module.eks.aws_security_group.worker_group_mgmt_two",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0401200e649dc646d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0401200e649dc646d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211031183207780400000008",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0b83424a08bd7862d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b83424a08bd7862d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2021103118320897040000000a",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0a3794c1f1aefba34",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0a3794c1f1aefba34",
            "ingress": [],
            "name": "airflow-eks-data-bootcamp2021103118320897250000000b",
            "name_prefix": "airflow-eks-data-bootcamp",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0f76835dfde025e39",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0f76835dfde025e39",
            "ingress": [],
            "name": "airflow-eks-data-bootcamp2021103118320925650000000c",
            "name_prefix": "airflow-eks-data-bootcamp",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_worker_sg",
              "kubernetes.io/cluster/airflow-eks-data-bootcamp": "owned"
            },
            "tags_all": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_worker_sg",
              "kubernetes.io/cluster/airflow-eks-data-bootcamp": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3280365144",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a3794c1f1aefba34",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4165171533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a3794c1f1aefba34",
            "self": false,
            "source_security_group_id": "sg-0f76835dfde025e39",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2452616752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f76835dfde025e39",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3580588173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f76835dfde025e39",
            "self": false,
            "source_security_group_id": "sg-0a3794c1f1aefba34",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3004097239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f76835dfde025e39",
            "self": false,
            "source_security_group_id": "sg-0a3794c1f1aefba34",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3142497064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f76835dfde025e39",
            "self": false,
            "source_security_group_id": "sg-0f76835dfde025e39",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b1739420bb776c43",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-223-216-94.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.216.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:internet-gateway/igw-0a3078d827a5f7762",
            "id": "igw-0a3078d827a5f7762",
            "owner_id": "855157247171",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1739420bb776c43",
            "connectivity_type": "public",
            "id": "nat-0406373858f74ba67",
            "network_interface_id": "eni-0e518e5b752521410",
            "private_ip": "10.0.0.19",
            "public_ip": "18.223.216.94",
            "subnet_id": "subnet-0d69f75ab1b5d96ec",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ecb476a58cba8d991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0406373858f74ba67",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecb476a58cba8d99",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3078d827a5f7762",
            "id": "r-rtb-071d3e27237e102a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071d3e27237e102a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:route-table/rtb-0ecb476a58cba8d99",
            "id": "rtb-0ecb476a58cba8d99",
            "owner_id": "855157247171",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:route-table/rtb-071d3e27237e102a7",
            "id": "rtb-071d3e27237e102a7",
            "owner_id": "855157247171",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968cabd033615ed2",
            "route_table_id": "rtb-0ecb476a58cba8d99",
            "subnet_id": "subnet-079ccfed21acb2cb6"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021effff7987149a0",
            "route_table_id": "rtb-0ecb476a58cba8d99",
            "subnet_id": "subnet-03a0f3d0fe7d6f049"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ba7e6e2dd9c341a",
            "route_table_id": "rtb-071d3e27237e102a7",
            "subnet_id": "subnet-0d69f75ab1b5d96ec"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0caf64081018682ed",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0caf64081018682ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default-sg",
            "name_prefix": "",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-079ccfed21acb2cb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-079ccfed21acb2cb6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-03a0f3d0fe7d6f049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03a0f3d0fe7d6f049",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-0d69f75ab1b5d96ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d69f75ab1b5d96ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855157247171",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:vpc/vpc-051dee3a395c1136c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0308de0c23ce9aca1",
            "default_route_table_id": "rtb-0b4e0c63832ffee20",
            "default_security_group_id": "sg-0e07f010b2dea3a59",
            "dhcp_options_id": "dopt-0cda6ee1e619428c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-051dee3a395c1136c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b4e0c63832ffee20",
            "owner_id": "855157247171",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-07aba1cdd43a8c722",
            "description": "RDS servers (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aba1cdd43a8c722",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-051dee3a395c1136c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}